tests/traci/get_variable/MeMeDetector/errors/UnknownAD/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xa1: Multi entry exit detector 'xxx' is not known
